# -lite.ai.toolkit.linux

./: .gitignore  CMakeLists.txt  main.cpp  setup_3rdparty.cmake
